data/issues_nolabel/nolabel_test_8016.txt
C++ demo failed with lib in the makefile project

I can not build and run the demo on the C++ API page:
https://www.tensorflow.org/api_guides/cc/guide
When link to the lib built in the /contrib/makefile project, does that mean that the cc/ops are totally not supported or I missed some steps or information?
Current errors are as the following:
../../../../Git/tensorflow/bazel-out/local-fastbuild/genfiles/tensorflow/cc/ops/array_ops.h:24:57: error: no type named 'Input' in namespace 'tensorflow::ops'; did you mean simply 'Input'?
  BatchMatrixBandPart(const ::tensorflow::Scope& scope, ::tensorflow::ops::Input
                                                        ^~~~~~~~~~~~~~~~~~~~~~~~
                                                        Input